--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Thomas's documentation example
+title: Thomas Doc Example
 description: Trying out using the Just the Docs theme!
 theme: just-the-docs
 
